	* Added feature #11916: New TYPO3_DB method for queries that expect just a single result row: exec_SELECTgetSingleRow (Thanks to Jo Hasenau)
	* Fixed bug #16444: Bugfix:dbal installs itself automatically whenever the install tool is called (Thanks to Susanne Moog)
	* Fixed bug #16456: When dbal is activated, styles.content.get (and others) doesn't work anymore (empty result)

2010-11-17  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #16039: Move TCEforms HTML templates to template file (Thanks to Steffen Kamper)
	* Added feature #4203: Workspace DB / filemounts should narrow down the users' mounts (Thanks to Sonja Scholz)

2010-11-17  Susanne Moog  <typo3@susanne-moog.de>

	* Added feature #16284: Optimize stdWrap usage for TypoScript content element LOAD_REGISTER (Thanks to Jo Hasenau)
	* Added feature #16285: Optimize stdWrap usage for TypoScript content element RECORDS (Thanks to Jo Hasenau)
	* Added feature #15916: Display a link to list module on sysfolders when in page module (Thanks to Georg Ringer)
	* Fixed bug #16107: listNum = 0 not working anymore due to stdWrap changes (Thanks to Jo Hasenau)
	* Added feature #16282: Optimize stdWrap usage for TypoScript content element IMAGE (Thanks to Jo Hasenau)
	* Added feature #16430: Optimize stdWrap usage for TypoScript content element GIFBUILDER (Thanks to Jo Hasenau)
	* Added feature #16393: Date ranges for ExtJS date pickers (Thanks to Stefano Cecere)
	* Added feature #16446: Optimize stdWrap usage for tslib_menu (Thanks to Jo Hasenau)

2010-11-17  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Updated NEWS.txt
	* Updated Workspaces to version 4.5.0beta1. See their ChangeLog for details.
	* Updated Extbase and Fluid to 1.3.0beta1a. See their ChangeLog for details.
	* Updated Workspaces to version 4.5.0beta1a. See their ChangeLog for details.

2010-11-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #2474: htmlArea RTE: Add general element properties editing dialogue